--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    <group android:scaleX="0.07036363"
+        android:scaleY="0.07036363"
+        android:translateX="30.78"
+        android:translateY="31.879784">
+        <path
+            android:pathData="M339.5,5.91l93.77,190a10.58,10.58 0,0 0,8 5.79L650.92,232.17a10.59,10.59 0,0 1,5.87 18.06L505.07,398.13a10.57,10.57 0,0 0,-3.05 9.37L537.84,616.37a10.6,10.6 0,0 1,-15.37 11.17l-187.54,-98.6a10.61,10.61 0,0 0,-9.86 0l-187.54,98.6A10.6,10.6 0,0 1,122.16 616.37L158,407.5a10.57,10.57 0,0 0,-3.05 -9.37L3.21,250.23a10.59,10.59 0,0 1,5.87 -18.06l209.68,-30.47a10.58,10.58 0,0 0,8 -5.79l93.77,-190A10.59,10.59 0,0 1,339.5 5.91Z"
+            android:fillColor="#fff"/>
+        <path
+            android:pathData="M330,49.79 L246.44,211.65a28,28 0,0 1,-22.32 15L42.69,243.24l191.69,9a28,28 0,0 0,27.54 -18.24Z"
+            android:fillColor="#fff"/>
+        <path
+            android:pathData="M126.28,592.3l-4.12,24a10.6,10.6 0,0 0,15.37 11.17l187.54,-98.6a10.61,10.61 0,0 1,9.86 0l187.54,98.6A10.6,10.6 0,0 0,537.84 616.37L502,407.5a10.57,10.57 0,0 1,3.05 -9.37l151.72,-147.9a10.59,10.59 0,0 0,-5.87 -18.06l-70.23,-10.21C467.1,425.82 293.16,533.14 126.28,592.3Z"
+            android:fillColor="#fff"/>
+    </group>
 </vector>
