--- a/smartrateapp/src/main/res/values/colors.xml
+++ b/smartrateapp/src/main/res/values/colors.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#006cbc</color>
-    <color name="colorPrimaryDark">#006cbc</color>
+    <color name="colorPrimary">#00C86E</color>
+    <color name="colorPrimaryDark">#00C86E</color>
     <color name="colorAccent">#073143</color>
-    <color name="colorLightWhite">#f9f7f7</color>
+
+    <color name="colorLightWhite">#FFF4F4</color>
+
+    <color name="grey_5">#f2f2f2</color>
+    <color name="grey_10">#e6e6e6</color>
     <color name="grey_40">#999999</color>
+    <color name="grey_50">#757575</color>
     <color name="grey_60">#666666</color>
+    <color name="grey_80">#E65E5E5E</color>
     <color name="grey_90">#263238</color>
 
-    <color name="gradient_start_color">#4c84ff</color>
-    <color name="gradient_end_color">#18a3fe</color>
+
 </resources>
