--- a/smartrateapp/src/main/res/values/styles.xml
+++ b/smartrateapp/src/main/res/values/styles.xml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
-    <style name="AppTheme.AppBarOverlay" parent="Theme.AppCompat.Light" />
-
     <style name="MyRatingBar" parent="@android:style/Widget.RatingBar">
-        <item name="android:minHeight">15dp</item>
-        <item name="android:maxHeight">15dp</item>
-        <item name="colorControlNormal">#ffb6b6b6</item>
-        <item name="colorControlActivated">#ffffb800</item>
+        <item name="android:minHeight">10dp</item>
+        <item name="android:maxHeight">10dp</item>
+        <item name="colorControlNormal">#A3A3A3</item>
+        <item name="colorControlActivated">#fbbe42</item>
     </style>
 
 </resources>
