--- a/smartrateapp/src/main/res/layout/dialog_rate.xml
+++ b/smartrateapp/src/main/res/layout/dialog_rate.xml
@@ -9,7 +9,6 @@
 	app:cardElevation="3dp"
 	app:cardUseCompatPadding="true">
 
-
 		<LinearLayout
 			android:orientation="vertical"
 			android:layout_width="300dp"
@@ -21,8 +20,6 @@
 				android:layout_width="168.0dip"
 				android:layout_height="130.0dip"
 				android:layout_marginTop="42.0dip"/>
-
-
 
 			<TextView
 				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -36,10 +33,7 @@
 				android:textAllCaps="false"/>
 
 			<TextView
-				android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-				android:textAlignment="center"
-				android:enabled="false"
-				android:textColor="@color/grey_50"
+				android:textAppearance="@style/TextAppearance.AppCompat.Small"
 				android:gravity="center"
 				android:layout_marginEnd="@dimen/spacing_30"
 				android:layout_marginStart="@dimen/spacing_30"
@@ -58,6 +52,7 @@
 		android:layout_marginTop="20.0dip">
 
 				<RatingBar
+					android:clickable="true"
 					android:id="@+id/rb_stars"
 					android:layout_gravity="center_horizontal"
 					android:orientation="horizontal"
@@ -68,10 +63,10 @@
 					android:scaleY="0.9"
 					android:scaleX="0.9"
 					android:theme="@style/MyRatingBar"/>
-	</LinearLayout>
+	      </LinearLayout>
 
 			<LinearLayout
-				android:background="@drawable/rounded_info"
+				android:background="@drawable/rate_rounded"
 				android:layout_width="fill_parent"
 				android:layout_height="35dp"
 				android:layout_marginTop="15.0dip"
@@ -82,6 +77,10 @@
 				android:gravity="center"
 				android:elevation="3dp">
 
+				<LinearLayout
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:background="?attr/selectableItemBackgroundBorderless">
 
 				<TextView
 					android:layout_width="match_parent"
@@ -92,22 +91,33 @@
 					android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
 					android:textStyle="bold"/>
 			</LinearLayout>
+			</LinearLayout>
+
 
 			<LinearLayout
 				android:id="@+id/bt_never"
-				android:layout_gravity="center"
+				android:gravity="center_horizontal"
 				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_marginTop="20dp"
-				android:layout_marginBottom="@dimen/spacing_smlarge">
+				android:layout_height="wrap_content"
+				android:layout_marginTop="22dp"
+				android:layout_marginBottom="22dp">
+
+
+				<LinearLayout
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:background="?attr/selectableItemBackgroundBorderless">
+
+
 
 				<TextView
 					android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-					android:textColor="@color/grey_40"
-					android:gravity="center_horizontal"
 					android:layout_width="match_parent"
-					android:layout_height="match_parent"
-					android:text="@string/rating_dialog_maybe_later"/>
+					android:gravity="center_horizontal"
+					android:layout_height="wrap_content"
+					android:text="@string/rating_dialog_maybe_later" />
+
+				</LinearLayout>
 
 			</LinearLayout>
 
