--- a/material-rating-lib/src/main/res/layout/dialog_feedback.xml
+++ b/material-rating-lib/src/main/res/layout/dialog_feedback.xml
@@ -24,9 +24,9 @@
 		<TextView
 			android:textAppearance="@style/TextAppearance.AppCompat.Medium"
 			android:textStyle="bold"
-			android:textColor="@color/colorPrimaryDark"
+			android:textColor="@color/rate_button_color"
 			android:gravity="center"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="35.0dip"
 			android:text="@string/feedback"/>
@@ -65,7 +65,7 @@
 
 		<LinearLayout
 			android:background="@drawable/rate_rounded"
-			android:layout_width="fill_parent"
+			android:layout_width="match_parent"
 			android:layout_height="35.0dip"
 			android:layout_marginTop="9.0dip"
 			android:layout_marginStart="48.0dip"
