--- a/material-rating-lib/src/main/res/values/styles.xml
+++ b/material-rating-lib/src/main/res/values/styles.xml
@@ -2,8 +2,8 @@
 <resources>
 
     <style name="AppRatingBar">
-        <item name="android:progressTint">@color/rate_active</item>
-        <item name="android:backgroundTint">@color/rate_normal</item>
+        <item name="android:progressTint">@color/rate_active_color</item>
+        <item name="android:backgroundTint">@color/rate_normal_color</item>
         <item name="android:secondaryProgressTint">@android:color/transparent</item>
     </style>
 
