--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         app:titleTextColor="@color/colorLightWhite"
-        android:background="@color/colorPrimaryDark"
-        app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium.Inverse" />
+        android:background="@color/colorPrimaryDark" />
 
 
     <LinearLayout
