--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        app:titleTextColor="@color/colorLightWhite"
+        app:titleTextColor="@android:color/white"
         android:background="@color/colorPrimaryDark" />
 
 
@@ -19,8 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:orientation="vertical"
-        tools:context="com.vimalcvs.smartapprate.MainActivity">
+        android:orientation="vertical">
 
 
         <TextView
@@ -31,33 +30,18 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
 
-        <LinearLayout
-            android:id="@+id/rate_ok"
-            android:background="@drawable/rounded_info"
-            android:layout_width="match_parent"
-            android:layout_height="45.0dip"
-            android:layout_marginTop="@dimen/spacing_30"
-            android:layout_marginStart="48.0dip"
-            android:layout_marginEnd="48.0dip"
-            android:elevation="3dp">
-
-            <LinearLayout
+            <Button
+                android:id="@+id/rate_ok"
+                android:background="@drawable/rate_button_blue"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="?attr/selectableItemBackgroundBorderless">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15.0dip"
+                android:layout_marginStart="48.0dip"
+                android:layout_marginEnd="48.0dip"
                 android:text="@string/show_rate"
                 android:gravity="center"
-                android:textColor="@color/colorLightWhite"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textStyle="bold"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
 
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
