--- a/material-rating-lib/src/main/res/drawable/ic_rate_feedback.xml
+++ b/material-rating-lib/src/main/res/drawable/ic_rate_feedback.xml
@@ -22,12 +22,27 @@
       android:pathData="M12,20.62a2.5,2.5 0,1 1,-2.5 -2.5A2.5,2.5 0,0 1,12 20.62Z"
       android:fillColor="#59c1ef"/>
   <path
-      android:pathData="M50.72,33.07l7.1,15.11a0.82,0.82 0,0 0,0.61 0.46l15.88,2.42a0.86,0.86 0,0 1,0.45 1.44L63.26,64.26A0.89,0.89 0,0 0,63 65l2.72,16.6a0.81,0.81 0,0 1,-1.17 0.89L50.37,74.66a0.75,0.75 0,0 0,-0.74 0L35.42,82.5a0.81,0.81 0,0 1,-1.17 -0.89L37,65a0.89,0.89 0,0 0,-0.23 -0.75L25.24,52.5a0.86,0.86 0,0 1,0.45 -1.44l15.88,-2.42a0.82,0.82 0,0 0,0.61 -0.46l7.1,-15.11A0.78,0.78 0,0 1,50.72 33.07Z"
+      android:pathData="M25,52.41V79.53a3.17,3.17 0,0 0,3.12 3.22H71.88A3.17,3.17 0,0 0,75 79.53V52.41Z"
+      android:fillColor="#aaa"/>
+  <path
+      android:pathData="M73.88,50.12 L51.61,33.3a2.64,2.64 0,0 0,-3.22 0L26.12,50.12A2.87,2.87 0,0 0,25 52.4H75A2.87,2.87 0,0 0,73.88 50.12Z"
+      android:fillColor="#d8d7db"/>
+  <path
+      android:pathData="M67.66,47.89H32.45a1,1 0,0 0,-1 1V77.63a1,1 0,0 0,1 1H67.66a1,1 0,0 0,1 -1V48.9A1,1 0,0 0,67.66 47.89Z"
       android:fillColor="#e0e6fa"/>
   <path
-      android:pathData="M50,36.56 L43.67,49.43A2.12,2.12 0,0 1,42 50.63L28.23,51.94l14.53,0.72a2.12,2.12 0,0 0,2.08 -1.45Z"
-      android:fillColor="#fff"/>
+      android:pathData="M37.21,56.81H63a0.52,0.52 0,0 0,0 -1H37.21a0.52,0.52 0,0 0,0 1Z"
+      android:fillColor="#00506a"/>
   <path
-      android:pathData="M34.57,79.7l-0.32,1.91a0.81,0.81 0,0 0,1.17 0.89l14.21,-7.84a0.75,0.75 0,0 1,0.74 0L64.58,82.5a0.81,0.81 0,0 0,1.17 -0.89L63,65a0.89,0.89 0,0 1,0.23 -0.75L74.76,52.5a0.86,0.86 0,0 0,-0.45 -1.44L69,50.25C60.39,66.46 47.21,75 34.57,79.7Z"
+      android:pathData="M63,60.18H37.21a0.51,0.51 0,0 0,0 1H63a0.51,0.51 0,0 0,0 -1Z"
+      android:fillColor="#00506a"/>
+  <path
+      android:pathData="M63,64.57H37.21a0.52,0.52 0,0 0,0 1H63a0.52,0.52 0,0 0,0 -1Z"
+      android:fillColor="#00506a"/>
+  <path
+      android:pathData="M28.12,82.75H71.93A3.11,3.11 0,0 0,75 79.59V52.41Z"
+      android:fillColor="#feffff"/>
+  <path
+      android:pathData="M25,52.41V79.59a3.11,3.11 0,0 0,3.07 3.16H71.88Z"
       android:fillColor="#f2f0f7"/>
 </vector>
