--- a/material-rating-lib/src/main/res/drawable/ic_rate_feedback.xml
+++ b/material-rating-lib/src/main/res/drawable/ic_rate_feedback.xml
@@ -1,26 +1,26 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="100dp"
-    android:height="100dp"
+    android:width="90dp"
+    android:height="90dp"
     android:viewportWidth="100"
     android:viewportHeight="100">
   <path
       android:pathData="M50,60.11m-38,0a38,38 0,1 1,76 0a38,38 0,1 1,-76 0"
-      android:fillColor="#0d7eff"/>
+      android:fillColor="@color/rate_button_color"/>
   <path
       android:pathData="M43.25,1.89l1.51,3.49l3.49,1.51l-3.49,1.51l-1.51,3.49l-1.51,-3.49l-3.49,-1.51l3.49,-1.51l1.51,-3.49z"
-      android:fillColor="#006dcd"/>
+      android:fillColor="@color/rate_button_color"/>
   <path
       android:pathData="M95.88,44.08l1.21,2.79l2.79,1.21l-2.79,1.2l-1.21,2.8l-1.21,-2.8l-2.79,-1.2l2.79,-1.21l1.21,-2.79z"
-      android:fillColor="#006dcd"/>
+      android:fillColor="@color/rate_button_color"/>
   <path
       android:pathData="M3.12,47.17l0.91,2.09l2.09,0.91l-2.09,0.9l-0.91,2.1l-0.91,-2.1l-2.09,-0.9l2.09,-0.91l0.91,-2.09z"
-      android:fillColor="#006dcd"/>
+      android:fillColor="@color/rate_button_color"/>
   <path
       android:pathData="M78.91,9.75A4,4 0,1 1,74 12.62,4 4,0 0,1 78.91,9.75Z"
-      android:fillColor="#59c1ef"/>
+      android:fillColor="@color/rate_button_color"/>
   <path
       android:pathData="M12,20.62a2.5,2.5 0,1 1,-2.5 -2.5A2.5,2.5 0,0 1,12 20.62Z"
-      android:fillColor="#59c1ef"/>
+      android:fillColor="@color/rate_button_color"/>
   <path
       android:pathData="M25,52.41V79.53a3.17,3.17 0,0 0,3.12 3.22H71.88A3.17,3.17 0,0 0,75 79.53V52.41Z"
       android:fillColor="#aaa"/>
@@ -32,13 +32,13 @@
       android:fillColor="#e0e6fa"/>
   <path
       android:pathData="M37.21,56.81H63a0.52,0.52 0,0 0,0 -1H37.21a0.52,0.52 0,0 0,0 1Z"
-      android:fillColor="#00506a"/>
+      android:fillColor="@color/rate_button_color"/>
   <path
       android:pathData="M63,60.18H37.21a0.51,0.51 0,0 0,0 1H63a0.51,0.51 0,0 0,0 -1Z"
-      android:fillColor="#00506a"/>
+      android:fillColor="@color/rate_button_color"/>
   <path
       android:pathData="M63,64.57H37.21a0.52,0.52 0,0 0,0 1H63a0.52,0.52 0,0 0,0 -1Z"
-      android:fillColor="#00506a"/>
+      android:fillColor="@color/rate_button_color"/>
   <path
       android:pathData="M28.12,82.75H71.93A3.11,3.11 0,0 0,75 79.59V52.41Z"
       android:fillColor="#feffff"/>
