--- a/material-rating-lib/src/main/res/drawable/rate_rounded.xml
+++ b/material-rating-lib/src/main/res/drawable/rate_rounded.xml
@@ -7,4 +7,8 @@
         android:bottomRightRadius="25dp"
         android:topLeftRadius="25dp"
         android:topRightRadius="25dp" />
+
+    <size
+        android:width="150dp"
+        android:height="25dp"/>
 </shape>
