--- a/material-rating-lib/src/main/res/layout/dialog_rate.xml
+++ b/material-rating-lib/src/main/res/layout/dialog_rate.xml
@@ -1,111 +1,118 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<androidx.cardview.widget.CardView
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:orientation="vertical"
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
-	app:cardCornerRadius="10dp"
-	app:cardElevation="3dp"
-	app:cardUseCompatPadding="true">
+<?xml version="1.0" encoding="utf-8"?>
+	<androidx.cardview.widget.CardView
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		app:cardElevation="0dp"
+		app:cardCornerRadius="6dp"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintEnd_toEndOf="parent">
 
-	<LinearLayout
-		android:orientation="vertical"
-		android:layout_width="280dp"
-		android:layout_height="wrap_content">
-
-		<ImageView
-			android:layout_gravity="center_horizontal"
-			android:src="@drawable/ic_rate_star"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="40.0dip"/>
-
-		<TextView
-			android:textAppearance="@style/TextAppearance.AppCompat.Menu"
-			android:textStyle="bold"
-			android:textColor="@color/rate_button_color"
-			android:gravity="center"
+		<androidx.constraintlayout.widget.ConstraintLayout
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="35.0dip"
-			android:text="@string/rate_app"/>
+			android:layout_height="wrap_content">
 
-		<TextView
-			android:textAppearance="@style/TextAppearance.AppCompat.Small"
-			android:gravity="center"
-			android:layout_marginEnd="@dimen/spacing_30"
-			android:layout_marginStart="@dimen/spacing_30"
-			android:layout_gravity="center_horizontal"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="16.0dip"
-			android:text="@string/rate_app_dis" />
+			<androidx.appcompat.widget.AppCompatImageView
+				android:id="@+id/icon"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginTop="10dp"
+				android:background="@drawable/ic_rate_star"
+				app:layout_constraintTop_toTopOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintEnd_toEndOf="parent" />
+
+			<androidx.appcompat.widget.AppCompatTextView
+				android:id="@+id/dialog_title"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_marginTop="10dp"
+				android:text="@string/feedback"
+				android:textAppearance="@style/TextAppearance.AppCompat.Menu"
+				android:textColor="@color/rate_button_color"
+				android:textStyle="bold"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@id/icon"/>
 
 
-		<LinearLayout
-			android:gravity="center"
-			android:orientation="vertical"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="20.0dip">
+			<androidx.appcompat.widget.AppCompatTextView
+				android:id="@+id/give_five_star"
+				android:textAppearance="@style/TextAppearance.AppCompat.Small"
+				android:gravity="center"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textSize="13sp"
+				android:layout_marginTop="6dp"
+				android:text="@string/rate_app_dis"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@id/dialog_title"/>
+
+
+
 
 			<RatingBar
 				android:id="@+id/rb_stars"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_gravity="center_horizontal"
+				android:layout_marginTop="10dp"
 				android:numStars="5"
-				android:rating="0"
-				android:stepSize="1"
-				android:theme="@style/AppRatingBar"/>
+				android:stepSize="1.0"
+				android:scaleX="0.9"
+				android:scaleY="0.9"
+				android:theme="@style/AppRatingBar"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@id/give_five_star" />
 
-		</LinearLayout>
-
-
-		<Button
-			android:id="@+id/bt_later"
-			android:background="@drawable/rate_button_blue"
-			android:layout_width="match_parent"
-			android:layout_height="35.0dip"
-			android:layout_marginTop="9.0dip"
-			android:layout_marginStart="48.0dip"
-			android:layout_marginEnd="48.0dip"
-			android:text="@string/rate_new"
-			android:gravity="center"
-			android:textColor="@android:color/white"
-			android:textStyle="bold" />
-
-
-		<LinearLayout
-			android:id="@+id/bt_never"
-			android:gravity="center_horizontal"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="22dp"
-			android:layout_marginBottom="22dp">
-
-
-			<LinearLayout
+			<androidx.appcompat.widget.AppCompatButton
+				android:id="@+id/bt_send"
 				android:layout_width="wrap_content"
+				android:layout_height="25dp"
+				android:background="@drawable/rate_button_blue"
+				android:gravity="center"
+				android:text="@string/rate_new"
+				android:textColor="@android:color/white"
+				android:textAllCaps="false"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@id/rb_stars" />
+
+
+			<androidx.appcompat.widget.LinearLayoutCompat
+				android:id="@+id/bt_no"
+				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:background="?attr/selectableItemBackgroundBorderless">
+				android:layout_marginTop="10dp"
+				android:layout_marginBottom="10dp"
+				android:gravity="center_horizontal"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@id/bt_send">
 
-
-
-				<TextView
-					android:background="?attr/selectableItemBackgroundBorderless"
-					android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-					android:layout_width="match_parent"
-					android:gravity="center_horizontal"
+				<androidx.appcompat.widget.LinearLayoutCompat
+					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:text="@string/rating_dialog_maybe_later" />
+					android:background="?attr/selectableItemBackgroundBorderless">
 
-			</LinearLayout>
+					<androidx.appcompat.widget.AppCompatTextView
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:gravity="center_horizontal"
+						android:text="@string/rating_dialog_maybe_later"
+						android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
-		</LinearLayout>
+				</androidx.appcompat.widget.LinearLayoutCompat>
 
-	</LinearLayout>
+			</androidx.appcompat.widget.LinearLayoutCompat>
 
 
-</androidx.cardview.widget.CardView>
+		</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+	</androidx.cardview.widget.CardView>
